# basic_library

./: .gitignore  CMakeLists.txt
basic/: feedback.hpp  golden_search.hpp  limiter.hpp  overshoot_simulator.hpp
device/: encoder.hpp  motor.hpp
test/: debug_multidiff_transform.cpp  eigentest.cpp  golden_search.cpp  multidiff_transform.cpp  static_transform.cpp
transform/: diff_transform.hpp  dynamic_transform.hpp  multidiff_transform.hpp  static_transform.hpp
